--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,6 +41,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
+       apt install uuid-dev libbsd-dev
        make rebuild
 
     - name: Perform CodeQL Analysis
