--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,7 +41,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       apt install uuid-dev libbsd-dev
+       sudo apt install uuid-dev libbsd-dev
        make rebuild
 
     - name: Perform CodeQL Analysis
